# SubaGuiCpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  def.json
examples/standalone_app/: CMakeLists.txt  main.cpp  molten.mm
src/core/: CMakeLists.txt  quad_batch.h  renderer-ogl.cpp  renderer-vk.cpp  renderer.cpp  renderer.h
src/core/shaders/: textured_quad.frag  textured_quad.vert
src/gui/: CMakeLists.txt  guikit.cpp  guikit.h
src/platform/: CmakeLists.txt  Events.h  NativeParent_gl.h  NativeParent_gl.mm  NativeParent_vk.h  NativeParent_vk.mm  PlatformWindow_cocoa.h  PlatformWindow_cocoa.mm  PlatformWindow_x11.cpp  window_cocoa.h  window_cocoa.mm  window_win32.cpp
